@@ -1,4 +1,6 @@
 lldpd (0.7.6)
+  * Features:
+    + Provide a way to build packages for OSX.
   * Fixes:
     + Compilation fix for OSX 10.6.
 
